--- a/fifa-live.html
+++ b/fifa-live.html
@@ -222,7 +222,7 @@ img {
 
 <!--match mdw-->
 <div class="mnajiri">
-     <a class="fullink" href="fifa-live-n"></a>
+     <a class="fullink" href="#"></a>
        <div class="mnajiriin">
          <div class="mpart1">
            <div class="right_match">
@@ -231,7 +231,7 @@ img {
                   <div class="fname">Serbia</div>
                </span>
            </div>
-                 <strong class="najiri1">12:00 PM</strong>
+                 <strong class="najiri1">3 - 3</strong>
                  <div class="left_match">
                    <span class="left_tech">
                      <img src="https://j.top4top.io/p_2521n348v1.jpg">
@@ -241,7 +241,7 @@ img {
             </div>
                <div class="details_match">
                   <span class="first_match">
-                     <i aria-hidden="true" class="fa fa-external-link"></i><b>Live</b>
+                     <i aria-hidden="true" class="fa fa-clock-o"></i><b>Match end</b>
                    </span>
                    <span class="thany"><i aria-hidden="true" class="fa fa-futbol-o"></i><b>Lun 28/11</b>
                    </span>
@@ -276,7 +276,7 @@ img {
           </div>
              <div class="details_match">
                 <span class="first_match">
-                   <i aria-hidden="true" class="fa fa-clock-o"></i><b>7h 30 min</b>
+                   <i aria-hidden="true" class="fa fa-external-link"></i><b>live</b>
                  </span>
                  <span class="thany"><i aria-hidden="true" class="fa fa-futbol-o"></i><b>Lun 28/11</b>
                  </span>
@@ -311,7 +311,7 @@ img {
           </div>
              <div class="details_match">
                 <span class="first_match">
-                   <i aria-hidden="true" class="fa fa-clock-o"></i><b>9h 30 min</b>
+                   <i aria-hidden="true" class="fa fa-clock-o"></i><b>1 day later</b>
                  </span>
                  <span class="thany"><i aria-hidden="true" class="fa fa-futbol-o"></i><b>Lun 28/11</b>
                  </span>
@@ -344,7 +344,7 @@ img {
           </div>
              <div class="details_match">
                 <span class="first_match">
-                   <i aria-hidden="true" class="fa fa-clock-o"></i><b> 11 h 30 min</b>
+                   <i aria-hidden="true" class="fa fa-clock-o"></i><b> 1 day later</b>
                  </span>
                  <span class="thany"><i aria-hidden="true" class="fa fa-futbol-o"></i><b>Lun 28/11</b>
                  </span>
