--- a/fifa-live.html
+++ b/fifa-live.html
@@ -241,7 +241,7 @@ img {
             </div>
                <div class="details_match">
                   <span class="first_match">
-                     <i aria-hidden="true" class="fa fa-clock-o"></i><b>Match end</b>
+                     <i aria-hidden="true" class="fa fa-ban"></i><b>Match end</b>
                    </span>
                    <span class="thany"><i aria-hidden="true" class="fa fa-futbol-o"></i><b>Lun 28/11</b>
                    </span>
@@ -311,7 +311,7 @@ img {
           </div>
              <div class="details_match">
                 <span class="first_match">
-                   <i aria-hidden="true" class="fa fa-clock-o"></i><b>1 day later</b>
+                   <i aria-hidden="true" class="fa fa-clock-o"></i><b>2 h 30 min</b>
                  </span>
                  <span class="thany"><i aria-hidden="true" class="fa fa-futbol-o"></i><b>Lun 28/11</b>
                  </span>
@@ -344,7 +344,7 @@ img {
           </div>
              <div class="details_match">
                 <span class="first_match">
-                   <i aria-hidden="true" class="fa fa-clock-o"></i><b> 1 day later</b>
+                   <i aria-hidden="true" class="fa fa-clock-o"></i><b>5 h 30 min </b>
                  </span>
                  <span class="thany"><i aria-hidden="true" class="fa fa-futbol-o"></i><b>Lun 28/11</b>
                  </span>
