--- a/fifa-live.html
+++ b/fifa-live.html
@@ -257,7 +257,7 @@ img {
 
 <!--match mdw-->
 <div class="mnajiri">
-   <a class="fullink" href="#"></a>
+   <a class="fullink" href="fifa-live-n"></a>
      <div class="mnajiriin">
        <div class="mpart1">
          <div class="right_match">
