--- a/fifa-live.html
+++ b/fifa-live.html
@@ -266,7 +266,7 @@ img {
                 <div class="fname">Ghana</div>
              </span>
          </div>
-               <strong class="najiri2">3:00 PM</strong>
+               <strong class="najiri2">1 - 2</strong>
                <div class="left_match">
                  <span class="left_tech">
                    <img src="https://a.top4top.io/p_2521yrvcg1.jpg">
