--- a/fifa-live.html
+++ b/fifa-live.html
@@ -315,7 +315,7 @@ border: 1px solid #FFD36A;
           </div>
              <div class="details_match">
                 <span class="first_match">
-                   <i aria-hidden="true" class="fa fa-external-link"></i><b>Match end</b>
+                   <i aria-hidden="true" class="fa fa-ban"></i><b>Match end</b>
                  </span>
                  <span class="thany"><i aria-hidden="true" class="fa fa-futbol-o"></i><b>Lun 28/11</b>
                  </span>
