--- a/fifa-live-n.html
+++ b/fifa-live-n.html
@@ -172,7 +172,7 @@ window.onload=show
   <center "the middle">
   	<iframe width="100%" height="240px" 
 
-SRC="https://online.alkoora.live/albaplayer/bein-sports-max-1/?serv=1" 
+SRC="gitwb.cf/fifa-server-hWudEyFh" 
 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
 gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
