--- a/fifa-live-n.html
+++ b/fifa-live-n.html
@@ -181,7 +181,7 @@ gyroscope; picture-in-picture" allowfullscreen>
 <center>
 <br>
 	<h6>
-		Watch  South korea vs Ghana live broadcast Gitwb live on 28-11-2022 World Cup 2022
+		Watch  Brazil vs Switzerland live broadcast Gitwb live on 28-11-2022 World Cup 2022
 
 
 		</h6>
