--- a/fifa-live.html
+++ b/fifa-live.html
@@ -383,7 +383,7 @@ border: 1px solid #FFD36A;
           </div>
              <div class="details_match">
                 <span class="first_match">
-                   <i aria-hidden="true" class="fa fa-clock-o"></i><b>2 h 50 min</b>
+                   <i aria-hidden="true" class="fa fa-clock-o"></i><b>2 h</b>
                  </span>
                  <span class="thany"><i aria-hidden="true" class="fa fa-futbol-o"></i><b>Lun 28/11</b>
                  </span>
