--- a/fifa-server-hWudEyFh.html
+++ b/fifa-server-hWudEyFh.html
@@ -24,7 +24,7 @@ var playerContainer = document.getElementById('playerdiv');
 var player = new bitmovin.player.Player(playerContainer, config);
 player.load(source).then(function() {player.play();console.log();});
 </script></div>            <div class='albaplayer_site_name'>Gitwb fifa live </div>            <div class='albaplayer_videos_channel'>
-                                <a class='button refresh' href='javascript:window.location.reload()'>تحديث</a>
+                                <a class='button refresh' href='javascript:window.location.reload()'>Refresh</a>
                                             </div>
                     </div>
         					</body>
