--- a/fifa-live.html
+++ b/fifa-live.html
@@ -331,7 +331,7 @@ border: 1px solid #FFD36A;
 
   <!--match mdw-->
 <div class="mnajiri">
-   <a class="fullink" href="fifa-live-n"></a>
+   <a class="fullink" href="#"></a>
      <div class="mnajiriin">
        <div class="mpart1">
          <div class="right_match">
@@ -340,7 +340,7 @@ border: 1px solid #FFD36A;
                 <div class="fname">Swiss</div>
              </span>
          </div>
-               <strong class="najiri3">6:00 PM</strong>
+               <strong class="najiri3">1-0</strong>
                <div class="left_match">
                  <span class="left_tech">
                    <img src="https://c.top4top.io/p_2521v5y3b1.jpg">
@@ -350,7 +350,7 @@ border: 1px solid #FFD36A;
           </div>
              <div class="details_match">
                 <span class="first_match">
-                   <i aria-hidden="true" class="fa fa-rss"></i><b>live</b>
+                   <i aria-hidden="true" class="fa fa-ban"></i><b>Match end</b>
                  </span>
                  <span class="thany"><i aria-hidden="true" class="fa fa-futbol-o"></i><b>Lun 28/11</b>
                  </span>
@@ -364,7 +364,7 @@ border: 1px solid #FFD36A;
 
   <!--match mdw-->
 <div class="mnajiri">
-   <a class="fullink" href="#"></a>
+   <a class="fullink" href="fifa-live-n"></a>
      <div class="mnajiriin">
        <div class="mpart1">
          <div class="right_match">
@@ -383,7 +383,7 @@ border: 1px solid #FFD36A;
           </div>
              <div class="details_match">
                 <span class="first_match">
-                   <i aria-hidden="true" class="fa fa-clock-o"></i><b>2 h</b>
+                   <i aria-hidden="true" class="fa fa-rss"></i><b>live</b>
                  </span>
                  <span class="thany"><i aria-hidden="true" class="fa fa-futbol-o"></i><b>Lun 28/11</b>
                  </span>
