--- a/fifa-live.html
+++ b/fifa-live.html
@@ -340,7 +340,7 @@ border: 1px solid #FFD36A;
                 <div class="fname">Swiss</div>
              </span>
          </div>
-               <strong class="najiri3">1-0</strong>
+               <strong class="najiri3">1 - 0</strong>
                <div class="left_match">
                  <span class="left_tech">
                    <img src="https://c.top4top.io/p_2521v5y3b1.jpg">
@@ -373,7 +373,7 @@ border: 1px solid #FFD36A;
                 <div class="fname">Uruguay</div>
              </span>
          </div>
-               <strong class="najiri1">9:00 PM</strong>
+               <strong class="najiri1">1 - 0</strong>
                <div class="left_match">
                  <span class="left_tech">
                    <img src="https://l.top4top.io/p_2521qhy521.jpg">
