--- a/fifa-live.html
+++ b/fifa-live.html
@@ -373,7 +373,7 @@ border: 1px solid #FFD36A;
                 <div class="fname">Uruguay</div>
              </span>
          </div>
-               <strong class="najiri1">1 - 0</strong>
+               <strong class="najiri1">2 - 0</strong>
                <div class="left_match">
                  <span class="left_tech">
                    <img src="https://l.top4top.io/p_2521qhy521.jpg">
@@ -383,7 +383,7 @@ border: 1px solid #FFD36A;
           </div>
              <div class="details_match">
                 <span class="first_match">
-                   <i aria-hidden="true" class="fa fa-rss"></i><b>live</b>
+                   <i aria-hidden="true" class="fa fa-ban"></i><b>Match end</b>
                  </span>
                  <span class="thany"><i aria-hidden="true" class="fa fa-futbol-o"></i><b>Lun 28/11</b>
                  </span>
