--- a/fifa-live-n.html
+++ b/fifa-live-n.html
@@ -323,7 +323,7 @@ footer {
       <img class="logo_site" src="http://img11.hostingpics.net/thumbs/mini_951661LogoBZT.png" alt="benoitz-team_logo" /></a>
       <a href="http://www.course-du-don.com"><img class="affiche_don" src="http://img11.hostingpics.net/pics/799427Coursedudon.png" alt="course-du-don_logo" /></a>
       <h1>fifa live</h1>
-      <h4>&copy Gitwb 2022</h4>
+      <h4>&copy Git-wb 2022</h4>
     </header>
     <div class="coming_soon">
       <div>
