--- a/fifa-live.html
+++ b/fifa-live.html
@@ -243,7 +243,7 @@ border: 1px solid #FFD36A;
   
     
 <div class="match_today container" id="match_today">
-<h2>FIFA World Cup  2022 matches</h2>
+<h2>  Quarter-finals</h2>
 <div class="container">
 	
 	     <a href="fifa-live">
@@ -274,7 +274,7 @@ border: 1px solid #FFD36A;
                <div class="left_match">
                  <span class="left_tech">
                    <img src="https://a.top4top.io/p_2521yrvcg1.jpg">
-                     <div class="fname">South Korea</div>
+                     <div class="fname">Morocco</div>
                  </span>
               </div>
           </div>
@@ -282,7 +282,7 @@ border: 1px solid #FFD36A;
                 <span class="first_match">
                    <i aria-hidden="true" class="fa fa-hourglass-half"></i><b>Waiting</b>
                  </span>
-                 <span class="thany"><i aria-hidden="true" class="fa fa-toggle-on"></i><b>Tomorrow</b>
+                 <span class="thany"><i aria-hidden="true" class="fa fa-toggle-on"></i><b>To Day</b>
                  </span>
                  <span class="liga_mdw"><i aria-hidden="true" class="fa fa-desktop"></i><b>Gitwb Sport HD1</b>
                  </span>
@@ -293,69 +293,6 @@ border: 1px solid #FFD36A;
 
 
 
-
-  <!--match mdw-->
-<div class="mnajiri">
-   <a class="fullink" href="fifa-live-n"></a>
-     <div class="mnajiriin">
-       <div class="mpart1">
-         <div class="right_match">
-            <span class="right_tech">
-               <img src="https://k.top4top.io/p_2521ehhko1.jpg">
-                <div class="fname">Uruguay</div>
-             </span>
-         </div>
-               <strong class="najiri3">5:00 PM</strong>
-               <div class="left_match">
-                 <span class="left_tech">
-                   <img src="https://i.top4top.io/p_25211ireh1.jpg">
-                     <div class="fname">Ghana</div>
-                 </span>
-              </div>
-          </div>
-             <div class="details_match">
-                <span class="first_match">
-                   <i aria-hidden="true" class="fa fa-hourglass-half"></i><b>Waiting</b>
-                 </span>
-                 <span class="thany"><i aria-hidden="true" class="fa fa-toggle-on"></i><b>Tomorrow</b>
-                 </span>
-                 <span class="liga_mdw"><i aria-hidden="true" class="fa fa-desktop"></i><b>Gitwb Sport HD1</b>
-                 </span>
-            </div>
-    </div>
- </div>
-
-<!--match mdw-->
-<div class="mnajiri">
-     <a class="fullink" href="#"></a>
-       <div class="mnajiriin">
-         <div class="mpart1">
-           <div class="right_match">
-              <span class="right_tech">
-                 <img src="https://f.top4top.io/p_2521v957w1.jpg">
-                  <div class="fname">Swiss</div>
-               </span>
-           </div>
-                 <strong class="najiri1">9:00 PM</strong>
-                 <div class="left_match">
-                   <span class="left_tech">
-                     <img src="https://c.top4top.io/p_252118zlj1.jpg">
-                       <div class="fname">Serbia</div>
-                   </span>
-                </div>
-            </div>
-               <div class="details_match">
-                  <span class="first_match">
-                     <i aria-hidden="true" class="fa fa-hourglass-half"></i><b>Waiting </b>
-                   </span>
-                   <span class="thany"><i aria-hidden="true" class="fa fa-toggle-on"></i><b>Tomorrow</b>
-                   </span>
-                   <span class="liga_mdw"><i aria-hidden="true" class="fa fa-desktop"></i><b>Gitwb Sport HD1</b>
-                   </span>
-              </div>
-      </div>
-   </div>
- 
 
   <!--match mdw-->
 <div class="mnajiri">
@@ -364,15 +301,15 @@ border: 1px solid #FFD36A;
        <div class="mpart1">
          <div class="right_match">
             <span class="right_tech">
-               <img src="https://j.top4top.io/p_2521n348v1.jpg">
-                <div class="fname">Cameroon</div>
+               <img src="https://k.top4top.io/p_2521ehhko1.jpg">
+                <div class="fname">France</div>
              </span>
          </div>
-               <strong class="najiri1">9:00 PM</strong>
+               <strong class="najiri3">9:00 PM</strong>
                <div class="left_match">
                  <span class="left_tech">
-                   <img src="https://c.top4top.io/p_2521v5y3b1.jpg">
-                     <div class="fname">Brazil</div>
+                   <img src="https://i.top4top.io/p_25211ireh1.jpg">
+                     <div class="fname">England</div>
                  </span>
               </div>
           </div>
@@ -380,13 +317,14 @@ border: 1px solid #FFD36A;
                 <span class="first_match">
                    <i aria-hidden="true" class="fa fa-hourglass-half"></i><b>Waiting</b>
                  </span>
-                 <span class="thany"><i aria-hidden="true" class="fa fa-toggle-on"></i><b>Tomorrow</b>
+                 <span class="thany"><i aria-hidden="true" class="fa fa-toggle-on"></i><b>To Day</b>
                  </span>
                  <span class="liga_mdw"><i aria-hidden="true" class="fa fa-desktop"></i><b>Gitwb Sport HD1</b>
                  </span>
             </div>
     </div>
  </div>
+
 
 
 
