--- a/store.html
+++ b/store.html
@@ -390,7 +390,7 @@ border: 1px solid #FFD36A;
       <div class="panel-header">
         <img class="panel-logo" src="https://g.top4top.io/p_2493yi2sp1.jpg" alt="Tektronix logo">
       </div>
-      <img class="panel-image" src="https://d.top4top.io/p_2494c750t1.jpg" alt="Tektronix Thermal camera">
+      <img class="panel-image" src="https://i.top4top.io/p_2538xj5mp1.jpg" alt="Tektronix Thermal camera">
       <div class="panel-body">
         <h4 class="product-title">Instagram likes</h4>
         <hr>
