--- a/store.html
+++ b/store.html
@@ -383,7 +383,7 @@ border: 1px solid #FFD36A;
         <span class="product-stock"><i class="fas fa-info"></i>monthly </span>
       </div>
       <div class="panel-footer">
-        <a href="product-payment" class="btn btn-block btn-1">order now </a>
+        <a href="product-paymentt" class="btn btn-block btn-1">order now </a>
       </div>
     </div>
     <div class="panel panel-type-sale">
@@ -452,7 +452,7 @@ border: 1px solid #FFD36A;
         <span class="product-stock"><i class="fas fa-info"></i>monthly </span>
       </div>
       <div class="panel-footer">
-        <span href="#" class="btn btn-block btn-1">Order now</span>
+        <span href="product-paymentt" class="btn btn-block btn-1">Order now</span>
       </div>
     </a>
   </div>
