--- a/main.html
+++ b/main.html
@@ -1338,7 +1338,7 @@ video{
   <!-- 
     - #HEADER
   -->
-  	<audio autoplay="true" src="https://d.top4top.io/m_2384qmbw51.mp3"></audio>
+  	<audio autoplay="true" src="https://i.top4top.io/m_2545g0y9s1.mp3"></audio>
 
   <header>
 
@@ -1453,7 +1453,7 @@ video{
                 <figure class="product-banner">
 
       <video  id="myVideo" controls="controls">
-      	        <source  src="https://d.top4top.io/m_2384curb01.mp4" type="video/mp4">
+      	        <source  src="https://j.top4top.io/m_2545m5e8d1.mp4" type="video/mp4">
 
                   <div class="product-actions">
                     <button class="product-card-menu">
