--- a/index.html
+++ b/index.html
@@ -1373,7 +1373,7 @@ video{
               </li>
 
               <li>
-                <a href="support" class="navbar-link">Support</a>
+                <a href="main" class="navbar-link">Skip after login</a>
               </li>
 
               <li>
