--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
 <body>
    
          
-            <img src="https://k.top4top.io/p_23228fnpz1.png" />
+            <img src="https://i.top4top.io/p_2582hbajv1.png" />
             <br>
     <section>
         <div class="signup_div">
@@ -20,7 +20,7 @@
             <button onclick="updateProfile()">UPDATE</button>
 
             <h3>Cancel ?</h3>
-            <a href="index">
+            <a href="main">
                 <button>Back</button>
             </a>
         </div>
