--- a/main.html
+++ b/main.html
@@ -1921,7 +1921,7 @@ textarea.form-input::-webkit-resizer { display: none; }
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="https://k.top4top.io/p_23228fnpz1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://i.top4top.io/p_2582hbajv1.png" type="image/x-icon">
 
   <!--
     - custom css link
@@ -2009,7 +2009,7 @@ textarea.form-input::-webkit-resizer { display: none; }
             <div class="contact-info">
         
 
-              <a href="userprofile.html" class="contact-link">MyProfile</a>
+              <a href="My-Profile" class="contact-link">MyProfile</a>
             </div>
 
           </li>
