--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <title>vip page</title>
-      <link rel="stylesheet" href="style.ss">
+      <title>gitwb</title>
+      <link rel="stylesheet" href="style.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       	<style>
 body {
@@ -22,7 +22,7 @@ body {
    
   } 
     img{
-   height:34%;
+   height:38%;
 width:60%;	
 padding:20%;
 
@@ -33,15 +33,15 @@ padding:20%;
     </style>
 <h1>About-vip-page</h1>
 
-<img src="https://k.top4top.io/p_23228fnpz1.png" ></img>
+<img src="https://i.top4top.io/p_2582hbajv1.png" ></img>
 <p>Non-free paid section with many tools, code and more </p>
 <p>It also includes Instagram loopholes </p>
 
 
-<h2>Gitwb Team</h2>
+<h2>Beweble Team</h2>
 <br>
 			<br>
-<footer>&copy Gitwb 2022</footer>
+<footer>&copy Gitwb 2023</footer>
       </script>
    </body>
 </html>
