--- a/beweble.html
+++ b/beweble.html
@@ -251,7 +251,7 @@ a {
 <!-- partial:index.partial.html -->
 <div class="container">
   <section class="top-bar">
-   	<a href="index" > 
+   	<a href="main" > 
    	
     <button class="top-bar__back-btn"><i class="material-icons">arrow_back_ios</i></button>
     </a>
