--- a/change-password.html
+++ b/change-password.html
@@ -181,17 +181,17 @@ label {
       <section class="container reset-container">
           <fieldset>
             <div>
-              <img src="https://k.top4top.io/p_23228fnpz1.png">
+              <img src="https://i.top4top.io/p_2582hbajv1.png">
         <title></title>
-        <script src="aut.js"></script>
+        <script src="auth.js"></script>
     </head>
   <body>
     <input type="email" placeholder="Enter Your Email " id="email_field" />
-      <button onclick="sendPasswordReset()">✴️ Get Link ✴️</button>
+      <button onclick="sendPasswordReset()"> Reset Password</button>
       <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
   <script>
     // Initialize Firebase
-    var config = {
+        var config = {
     apiKey: "AIzaSyBmQebUmPyy79z51kb6YKkAurZ11yehXIk",
     authDomain: "vip-page.firebaseapp.com",
     databaseURL: "",
