--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!-- Created By gitwb -->
+<!-- Created By beweble -->
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <title>gitwb</title>
+      <title>beweble-privacy</title>
       <link rel="stylesheet" href="style.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       	<style>
