--- a/video1.html
+++ b/video1.html
@@ -301,11 +301,11 @@ a{
             </video>
        <div class="container">
 	       <div class="home-box">
-		<a href="Musicplayer-download">
+		<a href="https://www.mediafire.com/file/y2b8atzr0g9atjw/videoplayer1.txt/file">
 	<button > Download </button>
 	</a>
 
-<a href="index">
+<a href="https://redacx.github.io/Video1/">
              
               	 <button > Demo</button> 
         </a>
@@ -313,10 +313,10 @@ a{
             <div class="lx-card">
               <a class="accordion">Description</a>
               <div class="panel">
-                <p>A music player with great features
+                <p>A video player with great features
                      there is an open source black and 
                      white theme that you can modify on  
-                     Source easily / follow us on Instagram <a href="https://instagram.com/gitwb_" target="_blank" rel="noopener noreferrer"> https://instagram.com/gitwb_</a>
+                     Source easily / follow us on Instagram <a href="https://instagram.com/beweble" target="_blank" rel="noopener noreferrer"> https://instagram.com/gitwb_</a>
                 </p>
 
               </div>
