--- a/music2.html
+++ b/music2.html
@@ -301,11 +301,11 @@ a{
             </video>
        <div class="container">
 	       <div class="home-box">
-		<a href="Musicplayer-download">
+		<a href="https://www.mediafire.com/file/0a2zxw2dxjjxuzz/musicplyer1.txt/file">
 	<button > Download </button>
 	</a>
 
-<a href="index">
+<a href="https://redacx.github.io/Music2">
              
               	 <button > Demo</button> 
         </a>
@@ -316,7 +316,7 @@ a{
                 <p>A music player with great features
                      there is an open source black and 
                      white theme that you can modify on  
-                     Source easily / follow us on Instagram <a href="https://instagram.com/gitwb_" target="_blank" rel="noopener noreferrer"> https://instagram.com/gitwb_</a>
+                     Source easily / follow us on Instagram <a href="https://instagram.com/beweble" target="_blank" rel="noopener noreferrer"> https://instagram.com/gitwb_</a>
                 </p>
 
               </div>
