--- a/music2.html
+++ b/music2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>music player 2</title>
+<title>video player 1</title>
 <style>
 :root {
   --plyr-color-main: #009227;
@@ -316,7 +316,7 @@ a{
                 <p>A music player with great features
                      there is an open source black and 
                      white theme that you can modify on  
-                     Source easily / follow us on Instagram <a href="https://instagram.com/beweble" target="_blank" rel="noopener noreferrer"> https://instagram.com/gitwb_</a>
+                     Source easily / follow us on Instagram <a style="color:#ffd36a" href="https://instagram.com/beweble" target="_blank" rel="noopener noreferrer"> Beweble</a>
                 </p>
 
               </div>
