--- a/music2.html
+++ b/music2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>video player 1</title>
+<title>music player 2</title>
 <style>
 :root {
   --plyr-color-main: #009227;
