--- a/video1.html
+++ b/video1.html
@@ -316,7 +316,7 @@ a{
                 <p>A video player with great features
                      there is an open source black and 
                      white theme that you can modify on  
-                     Source easily / follow us on Instagram <a href="https://instagram.com/beweble" target="_blank" rel="noopener noreferrer"> https://instagram.com/gitwb_</a>
+                     Source easily / follow us on Instagram <a style="color:#ffd36a" href="https://instagram.com/beweble" target="_blank" rel="noopener noreferrer"> Beweble</a>
                 </p>
 
               </div>
