--- a/main.html
+++ b/main.html
@@ -2798,7 +2798,7 @@ textarea.form-input::-webkit-resizer { display: none; }
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="https://i.top4top.io/p_2586b1fl91.jpg" alt="summary" loading="lazy">
+                  <img src="https://b.top4top.io/p_25865sv361.jpg" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">landing page 2</h3>
