--- a/music1.html
+++ b/music1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>music player 1</title>
+<title>login form</title>
 <style>
 :root {
   --plyr-color-main: #009227;
@@ -296,16 +296,16 @@ a{
             </div>
             <!-- example of how to use with the HTML5 <video> tag -->
             <video id="player" playsinline controls>
-              <source src="https://g.top4top.io/m_2586mpt8u1.mp4" type="video/webm" />
+              <source src="https://i.top4top.io/m_2586usxdt1.mp4" type="video/webm" />
               <track kind="captions" label="English" src="path/video-en.vtt" srclang="en" default />
             </video>
        <div class="container">
 	       <div class="home-box">
-		<a href="Musicplayer-download">
+		<a href="https://www.mediafire.com/file/ua99p6he6ce7hj8/jajaja.html/file">
 	<button > Download </button>
 	</a>
 
-<a href="index">
+<a href="https://redaxcxx.github.io/Musicplayer1/">
              
               	 <button > Demo</button> 
         </a>
@@ -316,7 +316,7 @@ a{
                 <p>A music player with great features
                      there is an open source black and 
                      white theme that you can modify on  
-                     Source easily / follow us on Instagram <a href="https://instagram.com/gitwb_" target="_blank" rel="noopener noreferrer"> https://instagram.com/gitwb_</a>
+                     Source easily / follow us on Instagram <a style="color:#ffd36a" href="https://instagram.com/beweble" target="_blank" rel="noopener noreferrer"> Beweble</a>
                 </p>
 
               </div>
